web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/12/output.txt
[SyntaxError]: Identifier has already been declared. (2,14)
2|export const bar = 1;
 |            ^
[SyntaxError]: Identifier has already been declared. (2,14)
2|export const bar = 1;
 |            ^
